<?xml version="1.0" encoding="utf-8"?>
<com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="702dp"
    android:focusable="false"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_black_opacity_stroke_black_2">
    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:focusable="true"
        android:nextFocusDown="@id/bt_language"
        app:settingIcon="@drawable/ic_screen"
        android:nextFocusRight="@id/bt_player"
        app:settingName="@string/aspect_ratio" />


    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_screen"
        android:layout_marginStart="44dp"
        android:nextFocusUp="@id/bt_screen"
        android:layout_marginTop="@dimen/size_16"
        android:nextFocusRight="@id/bt_slot"
        android:nextFocusDown="@id/bt_charge"
        android:focusable="true"
        app:settingIcon="@drawable/ic_language"
        app:settingName="@string/language" />

    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="44dp"
        android:nextFocusLeft="@id/bt_screen"
        android:layout_toEndOf="@+id/bt_screen"
        android:nextFocusDown="@id/bt_slot"
        android:nextFocusRight="@id/bt_favorite"
        android:focusable="true"
        app:settingIcon="@drawable/ic_player"
        app:settingName="@string/player" />

    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:nextFocusLeft="@id/bt_language"
        android:nextFocusRight="@id/bt_playback"
        android:nextFocusUp="@id/bt_player"
        android:layout_below="@id/bt_player"
        android:layout_toEndOf="@id/bt_language"
        android:nextFocusDown="@id/bt_charge"
        android:focusable="true"
        app:settingIcon="@drawable/ic_time"
        app:settingName="@string/slot" />

    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="44dp"
        android:nextFocusLeft="@id/bt_player"
        android:layout_toEndOf="@+id/bt_player"
        android:nextFocusDown="@id/bt_playback"
        android:focusable="true"
        app:settingIcon="@drawable/ic_scrap_setting"
        app:settingName="@string/delete_favorite" />

    <com.example.android.architecture.blueprints.beetv.widgets.SettingItemView
        android:id="@+id/bt_playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_favorite"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:nextFocusLeft="@id/bt_slot"
        android:layout_toEndOf="@+id/bt_slot"
        android:nextFocusUp="@id/bt_favorite"
        android:nextFocusDown="@id/bt_log_out"
        android:focusable="true"
        app:settingIcon="@drawable/ic_history"
        app:settingName="@string/delete_playback" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_below="@id/bt_language"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="@dimen/size_32"
        android:background="@color/button_text_focus"
        android:focusable="false" />

    <LinearLayout
        android:id="@+id/layoutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:focusable="false"
        android:minWidth="350dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:focusable="false"
                android:text="@string/id"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:focusable="false"
                android:text="@string/service_life"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false"
            android:paddingLeft="@dimen/size_18"
            android:layout_weight="1.6">
            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:focusable="false"
                android:singleLine="true"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/tv_expired_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000.00.00"
                android:gravity="start"
                android:focusable="false"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false"
            android:layout_weight="0">
            <TextView
                android:id="@+id/tv_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_black_radius_10"
                android:text="VIP"
                android:paddingHorizontal="@dimen/size_16"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:focusable="false"
                android:textSize="15sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/tv_number_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000 일"
                android:singleLine="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:focusable="false"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
        android:id="@+id/bt_authority"
        android:layout_width="@dimen/size_120"
        android:layout_height="52dp"
        android:layout_below="@id/layoutID"
        android:nextFocusLeft="@id/bt_charge"
        android:nextFocusUp="@id/bt_playback"
        android:nextFocusRight="@id/bt_playback"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20"
        android:layout_toEndOf="@+id/bt_charge"
        android:background="@color/chapter_bkg_color"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:textAllCaps="true"
            android:text="@string/authority"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>


    <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
        android:id="@+id/bt_log_out"
        android:layout_width="@dimen/size_120"
        android:layout_height="52dp"
        android:layout_below="@id/layoutID"
        android:layout_marginStart="@dimen/size_20"
        android:nextFocusLeft="@id/bt_charge"
        android:nextFocusUp="@id/bt_playback"
        android:nextFocusRight="@id/bt_playback"
        android:layout_marginTop="@dimen/size_20"
        android:layout_toEndOf="@+id/bt_charge"
        android:background="@color/chapter_bkg_color"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>

    <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
        android:id="@+id/bt_charge"
        android:layout_width="@dimen/size_120"
        android:layout_height="52dp"
        android:layout_marginStart="221dp"
        android:nextFocusRight="@id/bt_log_out"
        android:nextFocusLeft="@id/bt_language"
        android:nextFocusUp="@id/bt_slot"
        android:layout_marginTop="@dimen/size_20"
        android:layout_below="@id/layoutID"
        android:background="@color/chapter_bkg_color"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/charge"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/version"
        android:layout_marginStart="191dp"
        android:focusable="false"
        android:layout_marginTop="@dimen/size_50"
        android:layout_marginBottom="36dp"
        android:id="@+id/app_version"
        android:layout_below="@id/bt_charge"
        android:textSize="15sp"
        android:textColor="@color/white" />
</com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout>