<?xml version="1.0" encoding="utf-8"?>
<com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="450dp"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:clipChildren="false"
    android:gravity="center"
    android:background="@drawable/bg_black_opacity_stroke_black_2">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:focusable="false"

        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textSize="22sp"
        android:textColor="@color/white" />

    <com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_view"
        android:focusable="false"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="@dimen/size_90"
        android:orientation="horizontal">
        <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
            android:id="@+id/bt_confirm"
            android:layout_width="@dimen/size_150"
            android:layout_height="64dp"
            android:background="@color/mineShaft"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:text="@string/confirm"
                android:textSize="22sp"
                android:textColor="@color/white" />
        </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>


        <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
            android:id="@+id/bt_cancel"
            android:layout_width="@dimen/size_150"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/size_28"
            android:background="@color/mineShaft"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:text="@string/cancel"
                android:textSize="22sp"
                android:textColor="@color/white" />
        </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>
    </com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderLinearLayout>

</com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout>